# PreConcurrent

./: .gitignore  CMakeCache.txt  CMakeLists.txt  cmake_install.cmake  mainwindow.cpp
.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
